flowc/tests/fixtures/check_e140_aggregate_suggestion.expected.err
tests/fixtures/check_e140_aggregate_suggestion.flow:7:26: error[E140]: no field 'cst' on type 'Item'; did you mean 'cost'?
